--- a/index.css
+++ b/index.css
@@ -14,9 +14,32 @@ body{
   width: 50%;
   height: 50%;
   background-color: beige;
+  position: relative;
 }
 
-.dropdown ul {
+#menu-dropdown ul {
   list-style-type: none;
   text-decoration: none;
+}
+
+#menu-icon{
+  position: absolute;
+  top: 15%;
+  right: 20%;
+}
+
+#menu-dropdown{
+  position: absolute;
+  top: 25%;
+  right: 30%;
+  display: none;
+}
+
+#menu-close{
+  position: absolute;
+  right: 0;
+}
+
+#menu-dropdown:target {
+  display: block;
 }
