--- a/index.css
+++ b/index.css
@@ -15,7 +15,17 @@ body{
   height: 50%;
   background-color: beige;
   position: relative;
+  animation: 1s slide-in;
 }
+
+@keyframes slide-in{
+    0%{
+      opacity: 0.3;
+    },
+    100%{
+      opacity: 1;
+    }
+  }
 
 .next-btn, .prev-btn{
   position: absolute;
