update css styles hamburger menu

--- a/index.css
+++ b/index.css
@@ -54,6 +54,7 @@ body{
 #menu-dropdown ul {
   list-style-type: none;
   text-decoration: none;
+  text-align: left;
 }
 
 #menu-icon{
@@ -68,7 +69,7 @@ body{
   right: 30%;
   display: none;
   background: #efd2b0;
-  padding: 2%;
+  padding: 5%;
 }
 
 #menu-dropdown li a{
@@ -78,6 +79,7 @@ body{
 #menu-close{
   position: absolute;
   right: 0;
+  top: 1%;
 }
 
 #menu-dropdown:target {
