--- a/index.css
+++ b/index.css
@@ -6,14 +6,14 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000;
+  background-color: #e2dfdf;
   text-align: center;
 }
 
 .UI-Widgets, .Hamburger-Menu, #Lazy-load-area,.btn-popup-container{
   width: 50%;
   height: 50%;
-  background-color: beige;
+  background-color: #e1bee7;
   position: relative;
   animation: 1s slide-in;
 }
