--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body{
   text-align: center;
 }
 
-.UI-Widgets, .Hamburger-Menu, #Lazy-load-area,.btn-popup-container{
+.UI-Widgets, .Hamburger-Menu, #Lazy-load-area,.btn-popup-container,.paginate{
   width: 50%;
   height: 50%;
   background-color: #fff9c4;
