--- a/index.css
+++ b/index.css
@@ -34,6 +34,14 @@ body{
 
 .col-2{
   background-color: #e0dcb4;
+  padding: 0 3%;
+}
+
+.code-snippet{
+  overflow-x: auto;
+  white-space: pre-wrap;
+  font-size: larger;
+  color: firebrick;
 }
 
 @keyframes slide-in{
